[tool.poetry]
name = "pima-diabetes"
version = "0.1.0"
description = ""
authors = ["Ob1On3 <silvasmath@gmail.com>"]
readme = "README.md"
packages = [{include = "pima_diabetes"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
jupyterlab = "^4.0.9"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
